--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,13 +31,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Use SSH key
+        run: |
+                mkdir -p ~/.ssh/
+                echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+                sudo chmod 600 ~/.ssh/id_rsa
+      - name: Git config
+        run: |
+                git config --global user.email "raulcapillas@gmail.com"
+                git config --global user.name "raulcapillas"
+      - name: Install
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Deploy
+        run: npm run deploy -- -r git@gitub.com:rcapillas/master-action-pages.git
