--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Use SSH key
         run: |
-                mkdir -p ~/.ssh/
+                mkdir -p /home/runner/.ssh/
                 echo "${{secrets.SSH_PRIVATE_KEY}}" > /home/runner/.ssh/id_rsa
                 sudo chmod 600 /home/runner/.ssh/id_rsa
       - name: Git config
