--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,15 +30,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Use SSH key
         run: |
-                env
-                mkdir -p ~/.ssh
-                echo "${{ secrets.ARTIFACT_SSH_KEY }}" > ~/.ssh/id_rsa
-                chmod 600 ~/.ssh/id_rsa
-                ssh-keyscan -p 22 ${{ secrets.ARTIFACT_HOST }} >> ~/.ssh/known_hosts
-                sudo apt-get install sshpass
+                mkdir -p ~/.ssh/
+                echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+                sudo chmod 600 ~/.ssh/id_rsa
       - name: Git config
         run: |
                 git config --global user.email "raulcapillas@gmail.com"
