--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Use SSH key
         run: |
                 mkdir -p ~/.ssh/
-                echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+                echo "${{secrets.ACTIONS_DEPLOY_KEY}}" > ~/.ssh/id_rsa
                 sudo chmod 600 ~/.ssh/id_rsa
       - name: Git config
         run: |
