--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,11 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Use SSH key
-        run: |
-                mkdir -p ~/.ssh/
-                echo "${{secrets.ACTIONS_DEPLOY_KEY}}" > ~/.ssh/id_rsa
-                sudo chmod 600 ~/.ssh/id_rsa
+        - name: Configurar SSH
+          run: |
+                mkdir -p ~/.ssh
+                echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_rsa
+                chmod 600 ~/.ssh/id_rsa
+                ssh-keyscan github.com >> ~/.ssh/known_hosts
       - name: Git config
         run: |
                 git config --global user.email "raulcapillas@gmail.com"
