--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.jsx",
   "scripts": {
-    "start": "parcel index.html --open",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean && parcel build index.html",
-    "clean": "rimraf dist .parcel-cache",
+    "start": "vite",
+    "preview": "vite preview",
+    "build": "npm run clean && vite build",
+    "clean": "rimraf dist",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
@@ -21,11 +21,17 @@
   "homepage": "https://github.com/raulcapillas/master-action-pages#readme",
   "description": "",
   "dependencies": {
-    "gh-pages": "^6.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "@types/react": "^18.2.35",
+    "@types/react-dom": "^18.2.14",
+    "@vitejs/plugin-react": "^4.3.1",
+    "gh-pages": "^6.1.1",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5",
+    "vite-plugin-checker": "^0.8.0"
   }
 }
