--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.jsx",
   "scripts": {
     "start": "vite",
-    "preview": "vite preview",
+    "preview": "vite preview --port 8080",
     "build": "npm run clean && vite build",
     "clean": "rimraf dist",
     "deploy": "gh-pages -d dist"
