mod package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "preview": "vite preview --port 8080",
-    "build": "npm run clean && vite build",
+    "build": "vite build",
     "clean": "rimraf dist",
     "deploy": "gh-pages -d dist"
   },
