--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "vite",
     "preview": "vite preview --port 8080",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "prebuild": "npm run type-check",
     "build": "vite build",
     "clean": "rimraf dist",
     "deploy": "gh-pages -d dist"
@@ -21,6 +24,7 @@
   "homepage": "https://github.com/raulcapillas/master-action-pages#readme",
   "description": "",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -30,6 +34,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "gh-pages": "^6.1.1",
     "rimraf": "^6.0.1",
+    "sass": "^1.78.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.5",
     "vite-plugin-checker": "^0.8.0"
